cmake_minimum_required(VERSION 2.8.12)

PROJECT(GMNR)
SET(GMNR_VERSION 1.1)

MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

OPTION(GMNR_SHARED_LIBS "" ON)

OPTION(WITH_OPENCV "" ON)
OPTION(WITH_QT4 "" ON)

# Find the Eigen library
FIND_PACKAGE(Eigen3 3.2.6 REQUIRED)

# Find the OpenCV library
IF(WITH_OPENCV)
	FIND_PACKAGE(OpenCV REQUIRED)
ENDIF(WITH_OPENCV)

# Find the Qt4 library
IF(WITH_QT4)
	FIND_PACKAGE(Qt4 4.8.5 REQUIRED QtCore QtGui)
ENDIF(WITH_QT4)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
IF(CMAKE_HOST_WIN32)
	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libstatic)
ELSEIF(CMAKE_HOST_WIN32)
	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
ENDIF(CMAKE_HOST_WIN32)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(TPS)
ADD_SUBDIRECTORY(DualTPS)
ADD_SUBDIRECTORY(MultiTPS)
ADD_SUBDIRECTORY(LeastSquares)
ADD_SUBDIRECTORY(test)

INSTALL(FILES COPYRIGHT README DESTINATION share/doc)
INSTALL(PROGRAMS rungmnr.bat DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc)

# uninstall target
CONFIGURE_FILE(
	"${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
	"${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
	IMMEDIATE @ONLY)
ADD_CUSTOM_TARGET(uninstall
	COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)


