SET(LEASTSQUARES_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/LeastSquares/include)
SET(LEASTSQUARES_INCLUDE 
	${LEASTSQUARES_INCLUDE_DIR}/GMNR/LeastSquares/PointToPoint.h 
	${LEASTSQUARES_INCLUDE_DIR}/GMNR/LeastSquares/PointToPlane.h)
SET(LEASTSQUARES_SRC src/PointToPoint.cc src/PointToPlane.cc)
SET(LEASTSQUARES_FILES ${LEASTSQUARES_INCLUDE} ${LEASTSQUARES_SRC})

SET(COMMON_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/common/include)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR} ${COMMON_INCLUDE_DIR} ${LEASTSQUARES_INCLUDE_DIR})

IF(GMNR_SHARED_LIBS)
	ADD_LIBRARY(leastsquares SHARED ${LEASTSQUARES_FILES})
	SET_TARGET_PROPERTIES(leastsquares 
							PROPERTIES 
								OUTPUT_NAME "leastsquares" 
								CLEAN_DIRECT_OUTPUT 1 
								VERSION GMNR_VERSION)
	IF(CMAKE_HOST_WIN32)
		SET_TARGET_PROPERTIES(leastsquares 
								PROPERTIES 
									ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib"
									COMPILE_FLAGS "-DLIBLEASTSQUARES_BUILD -DLIBLEASTSQUARES_DYNAMIC")
	ENDIF(CMAKE_HOST_WIN32)
	INSTALL(TARGETS leastsquares
		RUNTIME DESTINATION bin  #.dll
		LIBRARY DESTINATION lib  #.so
		ARCHIVE DESTINATION lib) #.lib
ELSE(GMNR_SHARED_LIBS)
	ADD_LIBRARY(leastsquares_static STATIC ${LEASTSQUARES_FILES})
	SET_TARGET_PROPERTIES(leastsquares_static 
							PROPERTIES 
								OUTPUT_NAME "leastsquares" 
								CLEAN_DIRECT_OUTPUT 1 
								VERSION GMNR_VERSION)
	IF(CMAKE_HOST_WIN32)
		INSTALL(TARGETS leastsquares_static ARCHIVE DESTINATION libstatic) #.lib
	ELSE(CMAKE_HOST_WIN32)
		INSTALL(TARGETS leastsquares_static ARCHIVE DESTINATION lib)       #.so
	ENDIF(CMAKE_HOST_WIN32)
ENDIF(GMNR_SHARED_LIBS)

INSTALL(FILES ${LEASTSQUARES_INCLUDE} DESTINATION include/GMNR)


