SET(MATH_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/math/include)
SET(MATH_INCLUDE ${MATH_INCLUDE_DIR}/GMNR/math/GreenFunction.h)
SET(MATH_SRC_DIR ${PROJECT_SOURCE_DIR}/math/src)
SET(MATH_SRC ${MATH_SRC_DIR}/GreenFunction.cc)
SET(MATH_FILES ${MATH_INCLUDE} ${MATH_SRC})

SET(COMMON_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/common/include)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR} ${COMMON_INCLUDE_DIR} ${MATH_INCLUDE_DIR})

IF(GMNR_SHARED_LIBS)
	ADD_LIBRARY(math SHARED ${MATH_FILES})
	SET_TARGET_PROPERTIES(math 
							PROPERTIES 
								OUTPUT_NAME "math" 
								CLEAN_DIRECT_OUTPUT 1 
								VERSION GMNR_VERSION)
	IF(CMAKE_HOST_WIN32)
		SET_TARGET_PROPERTIES(math 
								PROPERTIES 
									ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib"
									COMPILE_FLAGS "-DLIBMATH_BUILD -DLIBMATH_DYNAMIC")
	ENDIF(CMAKE_HOST_WIN32)
	INSTALL(TARGETS math
			RUNTIME DESTINATION bin  #.dll
			LIBRARY DESTINATION lib  #.so
			ARCHIVE DESTINATION lib) #.lib
ELSE(GMNR_SHARED_LIBS)
	ADD_LIBRARY(math_static STATIC ${MATH_FILES})
	SET_TARGET_PROPERTIES(math_static 
							PROPERTIES 
								OUTPUT_NAME "math" 
								CLEAN_DIRECT_OUTPUT 1 
								VERSION GMNR_VERSION)
	IF(CMAKE_HOST_WIN32)
		INSTALL(TARGETS math_static ARCHIVE DESTINATION libstatic) #.lib
	ELSE(CMAKE_HOST_WIN32)
		INSTALL(TARGETS math_static ARCHIVE DESTINATION lib)       #.so
	ENDIF(CMAKE_HOST_WIN32)	
ENDIF(GMNR_SHARED_LIBS)

INSTALL(DIRECTORY ${MATH_INCLUDE_DIR}/ DESTINATION include)
#INSTALL(FILES ${MATH_INCLUDE} DESTINATION include/GMNR)