SET(TIME_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/time/include)
SET(TIME_INCLUDE ${TIME_INCLUDE_DIR}/GMNR/time.h)
SET(TIME_SRC src/time.cc)
SET(TIME_FILES ${TIME_INCLUDE} ${TIME_SRC})

INCLUDE_DIRECTORIES(${TIME_INCLUDE_DIR})

INSTALL(DIRECTORY ${TIME_INCLUDE_DIR}/ DESTINATION include)
#INSTALL(FILES ${TIME_INCLUDE} DESTINATION include/GMNR)


