SET(COMMON_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/common/include)
SET(MATH_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/math/include)
SET(TPS_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/TPS/include)
SET(DUALTPS_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/DualTPS/include)
SET(MULTITPS_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/MultiTPS/include)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR}  
	${COMMON_INCLUDE_DIR} 
	${MATH_INCLUDE_DIR} 
	${TPS_INCLUDE_DIR}
	${DUALTPS_INCLUDE_DIR}
	${MULTITPS_INCLUDE_DIR})

SET(NREGISTAR_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/app/nregistar/include)
SET(NREGISTAR_INCLUDE 
	${NREGISTAR_INCLUDE_DIR}/Correspondence.h
	${NREGISTAR_INCLUDE_DIR}/FindCorrespondences.h
	${NREGISTAR_INCLUDE_DIR}/PairwiseNonrigidRegistration.h
	${NREGISTAR_INCLUDE_DIR}/GlobalMuliviewNonrigidRegistration.h)
SET(NREGISTAR_SRC_DIR ${PROJECT_SOURCE_DIR}/app/nregistar/src)
SET(NREGISTAR_SRC 
	${NREGISTAR_SRC_DIR}/Correspondence.cpp
	${NREGISTAR_SRC_DIR}/FindCorrespondences.cpp
	${NREGISTAR_SRC_DIR}/PairwiseNonrigidRegistration.cpp
	${NREGISTAR_SRC_DIR}/GlobalMuliviewNonrigidRegistration.cpp)
SET(NREGISTAR_FILES ${NREGISTAR_INCLUDE} ${NREGISTAR_SRC})

IF(GMNR_SHARED_LIBS)
	ADD_EXECUTABLE(nregistar ${NREGISTAR_FILES})
	IF(CMAKE_HOST_WIN32)
		SET_TARGET_PROPERTIES(nregistar 
								PROPERTIES 
									COMPILE_FLAGS "-DLIBMATH_DYNAMIC -DLIBTPS_DYNAMIC -DLIBMULTITPS_DYNAMIC")
	ENDIF(CMAKE_HOST_WIN32)
	ADD_DEPENDENCIES(nregistar math tps multitps)
	LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
	TARGET_LINK_LIBRARIES(nregistar multitps dualtps tps math Qt4::QtCore Qt4::QtGui)
	INSTALL(TARGETS nregistar RUNTIME DESTINATION bin)
ELSE(GMNR_SHARED_LIBS)
	ADD_EXECUTABLE(nregistar_s ${NREGISTAR_FILES})
	ADD_DEPENDENCIES(nregistar_s multitps_static dualtps_static tps_static math_static)
	IF(CMAKE_HOST_WIN32)
		LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/libstatic)
	ELSEIF(CMAKE_HOST_WIN32)
		LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
	ENDIF(CMAKE_HOST_WIN32)
	TARGET_LINK_LIBRARIES(nregistar_s multitps_static dualtps_static tps_static math_static Qt4::QtCore Qt4::QtGui)
	INSTALL(TARGETS nregistar_s RUNTIME DESTINATION bin)
ENDIF(GMNR_SHARED_LIBS)