SET(COMMON_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/common/include)
SET(LEASTSQUARES_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/leastsquares/include)
SET(MATH_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/math/include)
SET(TPS_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/TPS/include)
SET(TPS_ICP_IINCLUDE_DIR ${PROJECT_SOURCE_DIR}/app/tps_icp/include)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR}  
	${OpenCV_INCLUDE_DIRS}
	${COMMON_INCLUDE_DIR} 
	${LEASTSQUARES_INCLUDE_DIR}
	${MATH_INCLUDE_DIR} 
	${TPS_INCLUDE_DIR}
	${TPS_ICP_IINCLUDE_DIR})

include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

IF(GMNR_SHARED_LIBS)
	ADD_EXECUTABLE(tps_icp src/tps_icp.cc include/tps_icp.h)
	IF(CMAKE_HOST_WIN32)
		SET_TARGET_PROPERTIES(tps_icp PROPERTIES COMPILE_FLAGS "-DLIBMATH_DYNAMIC -DLIBTPS_DYNAMIC -DLIBLEASTSQUARES_DYNAMIC")
	ENDIF(CMAKE_HOST_WIN32)
	ADD_DEPENDENCIES(tps_icp math tps leastsquares)
	LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib ${OpenCV_LIB_DIR})
	TARGET_LINK_LIBRARIES(tps_icp math tps leastsquares ${OpenCV_LIBS} ${PCL_LIBRARIES})
	INSTALL(TARGETS tps_icp RUNTIME DESTINATION bin)
ELSE(GMNR_SHARED_LIBS)
	ADD_EXECUTABLE(tps_icp_s src/tps_icp.cc include/tps_icp.h)
	ADD_DEPENDENCIES(tps_icp_s tps_static math_static leastsquares_static)
	IF(CMAKE_HOST_WIN32)
		LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/libstatic ${OpenCV_LIB_DIR})
	ELSEIF(CMAKE_HOST_WIN32)
		LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib ${OpenCV_LIB_DIR})
	ENDIF(CMAKE_HOST_WIN32)
	TARGET_LINK_LIBRARIES(tps_icp_s tps_static math_static leastsquares_static ${OpenCV_LIBS} ${PCL_LIBRARIES})
	INSTALL(TARGETS tps_icp_s RUNTIME DESTINATION bin)
ENDIF(GMNR_SHARED_LIBS)
