SET(COMMON_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/common/include)
SET(MATH_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/math/include)
SET(TPS_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/TPS/include)
SET(DUALTPS_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/DualTPS/include)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR}  
	${OpenCV_INCLUDE_DIRS}
	${COMMON_INCLUDE_DIR} 
	${MATH_INCLUDE_DIR} 
	${TPS_INCLUDE_DIR}
	${DUALTPS_INCLUDE_DIR})

IF(GMNR_SHARED_LIBS)
	ADD_EXECUTABLE(test_dualtps src/test_dualtps.cc)
	SET_TARGET_PROPERTIES(test_dualtps PROPERTIES COMPILE_FLAGS "-DLIBLEASTSQUARES_DYNAMIC")
	ADD_DEPENDENCIES(test_dualtps math tps dualtps)
	LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib ${OpenCV_LIB_DIR})
	TARGET_LINK_LIBRARIES(test_dualtps math tps dualtps ${OpenCV_LIBS})
	INSTALL(TARGETS test_dualtps RUNTIME DESTINATION bin)
ELSE(GMNR_SHARED_LIBS)
	ADD_EXECUTABLE(test_dualtps_s src/test_dualtps.cc)
	ADD_DEPENDENCIES(test_dualtps_s dualtps_static tps_static math_static)
	IF(CMAKE_HOST_WIN32)
		LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/libstatic ${OpenCV_LIB_DIR})
	ELSEIF(CMAKE_HOST_UNIX)
		LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib ${OpenCV_LIB_DIR})
	ENDIF()
	TARGET_LINK_LIBRARIES(test_dualtps_s dualtps_static tps_static math_static ${OpenCV_LIBS})
	INSTALL(TARGETS test_dualtps_s RUNTIME DESTINATION bin)
ENDIF(GMNR_SHARED_LIBS)