SET(COMMON_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/common/include)
SET(MATH_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/math/include)
SET(TPS_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/TPS/include)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR}  
	${OpenCV_INCLUDE_DIRS}
	${COMMON_INCLUDE_DIR} 
	${MATH_INCLUDE_DIR} 
	${TPS_INCLUDE_DIR})

IF(GMNR_SHARED_LIBS)
	ADD_EXECUTABLE(test_tps src/test_tps.cc)
	IF(CMAKE_HOST_WIN32)
		SET_TARGET_PROPERTIES(test_tps PROPERTIES COMPILE_FLAGS "-DLIBMATH_DYNAMIC -DLIBTPS_DYNAMIC")
	ENDIF(CMAKE_HOST_WIN32)
	ADD_DEPENDENCIES(test_tps math tps)
	LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib ${OpenCV_LIB_DIR})
	TARGET_LINK_LIBRARIES(test_tps math tps ${OpenCV_LIBS})
	INSTALL(TARGETS test_tps RUNTIME DESTINATION bin)
ELSE(GMNR_SHARED_LIBS)
	ADD_EXECUTABLE(test_tps_s src/test_tps.cc)
	ADD_DEPENDENCIES(test_tps_s tps_static math_static)
	IF(CMAKE_HOST_WIN32)
		LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/libstatic ${OpenCV_LIB_DIR})
	ELSEIF(CMAKE_HOST_WIN32)
		LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib ${OpenCV_LIB_DIR})
	ENDIF(CMAKE_HOST_WIN32)
	TARGET_LINK_LIBRARIES(test_tps_s tps_static math_static ${OpenCV_LIBS})
	INSTALL(TARGETS test_tps_s RUNTIME DESTINATION bin)
ENDIF(GMNR_SHARED_LIBS)
